# kiosk-be-crawl

./: .gitignore  main.py  pyproject.toml
.github/workflows/: cd.yml
app/: crawlling.py  db.py  main.py
app/crawlling/repository/: crawlling_repository.py
app/crawlling/service/: crawlling_service.py
app/s3/service/: s3_service.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
