[project]
name = "kiosk-be-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "mysql-connector-python>=9.4.0",
    "path>=17.1.1",
    "python-dotenv>=1.1.1",
    "selenium>=4.36.0",
]
